# python

./: .gitignore  README.md  apresentação.py  classe.py  classe_input.py  editar_xspf_caminhos.py  estrutura_condicional.py  funcao_de_ordem_superior.py  funcao_multiplicaca.py  matheus_apresentação.py  media_univesp.py  multiplicacao_terminal.py  sistema_bancario.py  tkinter_to_do_list.py  try_except.py  try_except_finally.py  verificar_espaço_disco.py
APIs/: open_library.py
Banco de dados/: crud_orm.py  crud_sql.py  sqlite_classe_login.py  sqlite_conexao.py
Bibliotecas/: import_pandas.py
Bibliotecas e Módulos/: import_asteval.py  import_hypot.py  import_json.py  import_math.py  import_math_2.py  import_matplotlib.py  import_numpy.py  import_os.py  import_pygame.py  import_random.py  import_re.py  import_requests.py  import_time.py  import_trunc.py
Condicionais/: 02_condições_aninhadas.py  calculadora_imc.py  comparador_de_numeros.py  condicionais_simples_05.py  condicionais_simples_07.py  condicionais_simples_10.py  condições_aninhadas_04.py  pagamento_com_descontos.py  verifica_ano_bissexto.py  verifica_triangulo.py
Conjuntos/: acessando_dados.py  conjunto_e_dicionario.py  conjuntos.py
Data e hora/: timedelta.py
Dicionários/: 03_dicionarios_aninhados.py  04_dicionarios_dentro_lista.py  05_inserir_dados.py  06_iterando_dicionarios.py  07_lista_como_valor.py  08_ordenacao.py  09_dicionario_dentro_dicionario.py  cadastro.py  dicionarios_aninhados.py  enumerate.py  inserir_dados.py  jogadores.py  nome_e_media.py  (+2 more)
Pacotes/meu_projeto/: README.md  pyproject.toml
Pacotes/meu_projeto/meu_pacote/nucleo/: __init__.py  adicao.py  divisao.py  multiplicacao.py  subtracao.py
Pacotes/meu_projeto/meu_pacote/utilitarios/: __init__.py  logger.py  validador.py
Pacotes/meu_projeto/scripts/: teste_script.py
Pacotes/my_project/: README.md  pyproject.toml  requirements.txt
Pacotes/my_project/my_package/: __init__.py
Pacotes/my_project/my_package/utils/: file_manager.py  logger.py
Pacotes/my_project/scripts/: script_test.py
Pacotes/package-template/: pyproject.toml
(+481 files in other folders)
