[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meu_pacote"
version = "0.1.0"
description = "Um pacote Python com operações matemáticas básicas"
authors = [
    { name = "Matheus" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
