[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
description = "Exemplo de pacote Python simples"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matheus", email = "seuemail@exemplo.com" }
]
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/seuusuario/my_project"
Documentation = "https://github.com/seuusuario/my_project#readme"
